# simpleCMakeSample

Simple_CMake_sample/: CMakeLists.txt
Simple_CMake_sample/mylib_static/: CMakeLists.txt  myclass.cpp  myclass.h
Simple_CMake_sample/theapp/: CMakeLists.txt  main.cpp
